BrndBot/web/static_resources/user/css/general_1.css
/* ... */
.user.active{
    background-image: url(/BrndBot/user/images/nav-icons/nav-icons_log-out.svg)
}

.log-out{
    background-image: url(/BrndBot/user/images/nav-icons/nav-icons_log-out.svg)
}

.main-nav a:hover.log-out{
    background-image: url(/BrndBot/user/images/nav-icons/nav-icons_log-out-active.svg)
}

.main-nav a{
    background-size: 70% 70%;
    background-position:center;
    background-repeat: no-repeat;
}


.main-content-wrap{
    position: fixed;
    top: 0px;
    left: 70px;
    width: calc(100vw - 70px);
    overflow-y: scroll;
    z-index: 0;
    height:100vh;
}

.sequence-content-wrap{
    position: fixed;
    top: 0px;
    left: 0px;
    width: 100vw;
    overflow-y: auto;
    z-index: 0;
}

.content-wrap-scrollable{
    overflow-y: scroll;
}



/* top nav */

.top-nav-wrap{

    width: calc(100vw - 70px);
    box-sizing: border-box;
    position: fixed;
    top: 0px;


}

.top-nav-wrap-sequence{
    width: 100% !important;
}

.top-nav-wrap .header{
    height: 60px;
    width: 100%;
    box-sizing: border-box;
    display:flex;
    align-content: center;
    align-items: center;
    background-color: white;
    border-bottom: 1px solid #ECF0F2 ;
}

.top-nav-wrap .header .back-button{
    width: 60px;
    height: 60px;
    background: #0F76A6;
    padding: 18px;
}

.top-nav-wrap .header .back-button{
    background-image: url(/BrndBot/user/images/backbutton.svg);
    background-position: center;
    background-size: 50%;
    background-repeat: no-repeat;
}

.top-nav-wrap .header h2{
    line-height: 60px;
    padding: 0px 0px 0px 30px;
    margin-top: 0px

}


.top-nav-wrap .header .top-nav-cta-container{
    padding-right: 30px;
    margin-left: auto;
    display: inline-flex;
    align-content: center;

}

.top-nav-bar-offset{
    height: 60px;
}


/* Sub Nav Classes */
.activeCampaign{
    color: #0F76A6;
    box-shadow: inset 0 -3px #0F76A6;
}
.top-sub-nav{
    height:40px;
    border-bottom: 1px solid #E2E3E7 ;
    background-color: #FFFFFF;
    width: 100%;
    display: inline-flex;
}


.hub-dropdown{
    width: 150px;
    background-color: #EFF2F6;
    height: 100%;
    display: inline-flex;
    margin-right: 30px;
    align-items: center;
    padding: 0px 30px
}

.hub-dropdown-icon{
    width: 20px;
    height: 20px;
    margin-left: auto;
}

.hub-dropdown div{
    line-height: 40px;
    padding: 0px 30px;
}

.hub-dropdown-text{
    line-height: 20px;

}

.hub-dropdown i{
    height: 40px;
    width: 40px;
    padding: 13px 12px;
}

.dropdown-inner-hub{
    position: relative;
    -webkit-user-select: none;
    -moz-user-select: none;
    padding: 0 ;
    vertical-align: middle;
    border-radius: 3px;
    min-width: 50px;
    min-height: 32px;
    background-color: #fff;
    border: 1px solid #c9c9c9;
    font-size: 14px;
    user-select:none;
    border-top: none;
    width:220px;
}

.hub-dropdown i:before{
    background-image: url(/BrndBot/user/images/dropdown.svg)
}

.hub-dropdown-section{
    height: 45px;
    width:100%;
    line-height: 45px;
    display: inline-flex;
    align-items:center;
    padding: 0px 30px;
}

.hub-dropdown-section:hover{
    background-color: #f9f9f9;
}

.hub-dropdown-section-icon{
    width: 20px;
    height: 20px;
    margin-right: 20px;
}

.sub-nav-tab-wrap{
    line-height: 39px;
    color: #AFB0B4 ;
    float: left;
    font-size: 14px;
    font-weight: 500;
    display:flex;

}

.sub-nav-tab-wrap-hub{
    padding-left:30px;

}

.sub-nav-tab-wrap.with-back-button{
    padding-left: 90px;
    width: 100%;
    border-bottom: 1px solid #E2E3E7 ;

}

.sub-nav-tab-wrap.no-back-button{
    padding-left: 30px;
    width: 100%;
    border-bottom: 1px solid #E2E3E7 ;
}


li.sub-nav-tab{
    transition-duration: .2s;
    transition-property: box-shadow, color;
}

li.sub-nav-tab:hover{
    color: darkgray;
    box-sizing: border-box;
    height: 40px;
}

li.sub-nav-tab:hover a{
    color: #555;
}

li.sub-nav-tab.active:hover{
    background-color: transparent;
}



li.sub-nav-tab a{
    line-height: 40px;
    text-align: center;
    height: 40px;
    display: block;
    margin-right: 30px;
}

li.sub-nav-tab.active a{
    color: #0F76A6;
    box-shadow: inset 0 -3px #0F76A6 ;
}

.top-subnav-bar-offset{
    height: 40px;
}



/*Content Classes*/

.content-wrap{
    height: calc(100vh - 60px);
    width: 100%;
}

.content-wrap-padding{
    padding: 25px 0px;
}

.content-wrap-flex{
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction:row;
    flex-direction: row;
    -webkit-align-items: center;
    align-items: center;
    -webkit-justify-content: center;
    justify-content: center;
}

.content-wrap-with-sub-nav{
    height: calc(100vh - 100px) !important;
}

.content-wrap-with-continue-bar{
    height: calc(100vh - 115px);
}


.bottom-offset{
    display: block;
    height: 60px;
}


.continue-bar{
    position: fixed;
    bottom: 0px;
    left: 70px;
    width: calc(100vw - 70px);
    background-color: white;
    border-top: 1px solid #E2E3E7;
    height: 55px;
}

.sequence-continue-bar{
    left: 0px !important;
    width: 100vw !important;
}

.continue-bar a{
    width: 200px;
    line-height: 55px;
    background-color: #D2D3D5;
    text-align: center;
    color: gray; 
    font-size: 13px;
    font-weight: 500;
}

.continue-bar-valid{
    background-color: greenyellow;
    color: white;
}

/* DASHBOARD */

.dash-main-cta-card-wrap{
    display: -webkit-flex;
    display: flex;
    -webkit-flex-direction:row;
    flex-direction: row;
    -webkit-align-items: center;
    align-items: center;
    margin-left: auto;
    justify-content: space-around;
}

.dash-main-cta-card{
    border: 1px solid #D2D3D5;
    border-radius: 3px;
    padding: 20px 0px;
    text-align: center;
    width: 32%;
    box-sizing: border-box;
}

.dash-main-cta-card object{
    margin: auto;
    width: 100px;
}
/* ... */

